Some fix in date's view with diff languages

--- a/app-web/src/main/resources/messages_ru_RU.properties
+++ b/app-web/src/main/resources/messages_ru_RU.properties
@@ -4,7 +4,7 @@ user.delete=Удалить пользователя
 user.del=Удалить
 user.info=Информация о пользователе
 user.add=Добавить
-
+user.avage=Ср.Возраст
 language.change=Изменить язык
 
 user.id=Ид
