--- a/app-web/src/main/resources/messages_en_US.properties
+++ b/app-web/src/main/resources/messages_en_US.properties
@@ -4,7 +4,7 @@ user.delete=Delete user
 user.del=delete
 user.info=User info
 user.add=Add
-
+user.avage=Av.Age
 language.change=Change language
 
 user.id=Id
