Add sitemesh to project. Some fix with css

--- a/app-web/src/main/resources/messages_en_US.properties
+++ b/app-web/src/main/resources/messages_en_US.properties
@@ -6,7 +6,7 @@ user.info=User info
 user.add=Add
 user.avage=Av.Age
 language.change=Change language
-
+filter.showHide=Show/Hide filter
 user.id=Id
 user.login=Login
 user.name=Name
@@ -15,8 +15,8 @@ user.age=Age
 message.list=List of messages
 message.create=Add message
 
-message.fromUserId=From user id
+message.fromUserId=From
 message.from=Id
-message.toUserId=To user id
+message.toUserId=To
 message.text=Text
 message.dateTime=Date and Time
