--- a/app-web/src/main/resources/messages_ru_RU.properties
+++ b/app-web/src/main/resources/messages_ru_RU.properties
@@ -6,7 +6,7 @@ user.info=Информация о пользователе
 user.add=Добавить
 user.avage=Ср.Возраст
 language.change=Изменить язык
-
+filter.showHide=показать/скрыть фильтр
 user.id=Ид
 user.login=Логин
 user.name=Имя
