Add field "countWriters" to User. "countWriters" show count people, who talk with current User

--- a/app-web/src/main/resources/messages_en_US.properties
+++ b/app-web/src/main/resources/messages_en_US.properties
@@ -11,7 +11,7 @@ user.id=Id
 user.login=Login
 user.name=Name
 user.age=Age
-
+user.countWriters=Count talker
 message.list=List of messages
 message.create=Add message
 
