--- a/app-web/src/main/resources/messages_ru_RU.properties
+++ b/app-web/src/main/resources/messages_ru_RU.properties
@@ -11,7 +11,7 @@ user.id=Ид
 user.login=Логин
 user.name=Имя
 user.age=Возраст
-
+user.countWriters=Кол-во пишущих
 message.list=Список сообщений
 message.create=Добавить сообщение
 
